--- a/module2/Dockerfile
+++ b/module2/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM golang:1.17-alpine
+FROM golang:1.17-alpine AS builder
 WORKDIR /app
 
 COPY go.mod ./
@@ -10,6 +10,11 @@ COPY *.go ./
 
 RUN go build -o /server
 
+# 采用多阶段构建，使原来镜像的大小从321MB缩小到11MB
+FROM alpine:latest
+
+COPY --from=builder /server /
+
 EXPOSE 8000
-nsenter
+
 CMD [ "/server" ]
